--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.18</version>
+        <version>2.5.10</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ru.javaops.bootjava</groupId>
@@ -16,7 +16,8 @@
     <url>https://javaops.ru/view/bootjava</url>
 
     <properties>
-        <java.version>21.0.1</java.version>
+        <java.version>15</java.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
