--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,16 +15,16 @@ spring:
         jdbc.batch_size: 20
   datasource:
     # ImMemory
-    url: jdbc:h2:mem:voting
-    #    tcp: jdbc:h2:tcp://localhost:9092/mem:voting
+    url: jdbc:h2:mem:bootjava
+    #    tcp: jdbc:h2:tcp://localhost:9092/mem:bootjava
     # Absolute path
-    #    url: jdbc:h2:C:/projects/bootjava/restorant-voting/db/voting
-    #    tcp: jdbc:h2:tcp://localhost:9092/C:/projects/bootjava/restorant-voting/db/voting
+    #    url: jdbc:h2:C:/projects/bootjava/db/bootjava
+    #    tcp: jdbc:h2:tcp://localhost:9092/C:/projects/bootjava/db/bootjava
     # Relative path form current dir
-    #    url: jdbc:h2:./db/voting
+    #    url: jdbc:h2:./db/bootjava
     # Relative path from home
-    #    url: jdbc:h2:~/voting
-    #    tcp: jdbc:h2:tcp://localhost:9092/~/voting
+    #    url: jdbc:h2:~/bootjava
+    #    tcp: jdbc:h2:tcp://localhost:9092/~/bootjava
     username: sa
     password:
   h2.console.enabled: true
@@ -34,6 +34,11 @@ spring:
     basePath: /api
     defaultPageSize: 20
     returnBodyOnCreate: true
+
+  # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-cache
+  cache:
+    cache-names: users
+    caffeine.spec: maximumSize=5000,expireAfterAccess=60s
 
 #  https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#security-properties
 #  security:
@@ -46,7 +51,7 @@ logging:
   level:
     root: WARN
     ru.javaops.bootjava: DEBUG
-#    org.springframework.security.web.FilterChainProxy: DEBUG
+    org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: DEBUG
 
 server.servlet:
   encoding:
